--- a/LolWeb/LolWeb/LolWeb.csproj
+++ b/LolWeb/LolWeb/LolWeb.csproj
@@ -67,11 +67,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Campeones.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="Imagenes\ashe.jpg" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Campeones.aspx.cs">
+      <DependentUpon>Campeones.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Campeones.aspx.designer.cs">
+      <DependentUpon>Campeones.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
